[tool.poetry]
name = "tesla-attention-analysis"
version = "0.1.0"
description = "Analyze Tesla stock price and Google Trends attention data"
authors = ["Chengji Zhang <cz2842@columbia.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
matplotlib = "^3.9.3"
yfinance = "^0.2.50"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
